# schema-agents

./: .gitignore  .hypha-token  ActionSchema.json  CONTRIBUTING.md  CategorizedIngredients.json  CategorizedIngredients.py  IngredientCategories.json  Makefile  README.md  check_kernels.py  genes_associated_with_Malignant_breast_neoplasm.txt  implemented_team.pkl  metadata.json  muscular_dystrophy_proteins.txt  package-lock.json  pyproject.toml  requirements.txt  requirements_test.txt  schema_agents_flow.mmd  smolagents_flow.mmd  test_executor.py  test_interpreter.py  test_simple.py  test_structured_reasoning.py
.data/: geo_query_analysis_team.py
Culinary_Creators/: team.json
docs/: README.md
examples/: agent_from_any_llm.py  gradio_ui.py  inspect_multiagent_run.py  multiple_tools.py  rag.py  rag_using_chromadb.py  sandboxed_execution.py  schema_agent_openai_example.py  text_to_sql.py
schema_agents/: __init__.py  agent.py  chain_reasoning.py  config.py  environment.py  hypha_service.py  llm.py  memory.py  reasoning.py  reasoning_factory.py  role.py  schema.py  schema_reasoning.py  structured_reasoning.py  teams.py  tree_reasoning.py  visualization.py
scripts/: 2023-11-24_team-designer_backup.py  2023-11-30_team_designer_backup.py  2023-11-30_test-json-dump.py  2023-11-30_test_json-dump.ipynb  2024-02-09_tests.ipynb  ActionSchema.py  GEO_dataset_team.py  IngredientCategories.py  SchemaActionOutline.json  SchemaAgentOutline.json  SchemaAgentOutline.py  StructuredQuery.json  alice_cooker_example.py  collaborative_analysis.py  create_model.py  database_interaction.py  (+30 more)
(+246 files in other folders)
