[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "schema-agents"
version = "0.2.0.rc4"
readme = "README.md"
description = "A schema-based LLM framework for building multi-agent collaborative systems."
dependencies = [
    "numpy>=1.21.2",
    "pydantic>=2.6.1",
    "openai>=1.63.2",
    "loguru",
    "openapi-pydantic",
    "makefun>=1.15.2",
    # "jsonschema>=4.0.1",
    # "shortuuid>=1.0.1",
    # "jhub-client",
    # "aiohttp-sse-client",
    # "jupyter-client",
    # "faiss-cpu",
    # "tiktoken>=0.7.0",
    # "tenacity",
    "pydantic-ai>=0.0.24",
    "hypha-rpc>=0.20.47"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["schema_agents*"]
exclude = ["tests*", "scripts*"]
